--- a/index.html
+++ b/index.html
@@ -1099,7 +1099,7 @@
             <div class="products-grid">
                 <div class="product-card animate" data-category="martinet">
                     <div class="product-image">
-                        <img src="59b20726882f267384e84c68c019093b.jpg" alt="Fromage Martinet 350g">
+                        <img src="MML (1).jpg" alt="Fromage Martinet 350g">
                     </div>
                     <div class="product-info">
                         <h3 class="product-title">Martinet 350g</h3>
@@ -1117,7 +1117,7 @@
                 </div>
                 <div class="product-card animate delay-1" data-category="martinet">
                     <div class="product-image">
-                        <img src="https://images.unsplash.com/photo-1541529086526-db283c563270?ixlib=rb-4.0.3" alt="Fromage Martinet 250g">
+                        <img src="LMMM.jpg" alt="Fromage Martinet 250g">
                     </div>
                     <div class="product-info">
                         <h3 class="product-title">Martinet 250g</h3>
@@ -1135,7 +1135,7 @@
                 </div>
                 <div class="product-card animate delay-2" data-category="martinet">
                     <div class="product-image">
-                        <img src="https://images.unsplash.com/photo-1568461401890-41da2f9e5d2d?ixlib=rb-4.0.3" alt="Fromage Martinet 125g">
+                        <img src="MMMM.jpg" alt="Fromage Martinet 125g">
                     </div>
                     <div class="product-info">
                         <h3 class="product-title">Martinet 125g</h3>
@@ -1153,7 +1153,7 @@
                 </div>
                 <div class="product-card animate delay-3" data-category="martchevre">
                     <div class="product-image">
-                        <img src="https://images.unsplash.com/photo-1589881136373-df5786e8220c?ixlib=rb-4.0.3" alt="Fromage Martéchèvre">
+                        <img src="CH.jpg" alt="Fromage Martéchèvre">
                     </div>
                     <div class="product-info">
                         <h3 class="product-title">Martéchèvre</h3>
@@ -1412,25 +1412,32 @@
                             <p>Lundi: Fermé</p>
                         </div>
                     </div>
-                    <div class="contact-info-item">
-                        <div class="contact-icon">
-                            <i class="fas fa-phone"></i>
-                        </div>
-                        <div>
-                            <h3>Téléphone</h3>
-                            <p>+33 1 23 45 67 89</p>
-                        </div>
+ <!-- Contact Section -->
+    <section id="contact" class="contact">
+        <div class="container">
+            <h2 class="section-title">Contactez-Nous</h2>
+            <div class="contact-container">
+                <div class="contact-info">
+                    <div class="contact-details">
+                        <h3>Nos Coordonnées</h3>
+                        <p><i class="fas fa-map-marker-alt"></i> Village Idjaad, Commune Iflissen, Daira Tigzirt, Wilaya Tizi Ouzou, Algérie</p>
+                        <p><i class="fas fa-phone"></i> +213 XXX XX XX XX</p>
+                        <p><i class="fas fa-envelope"></i> contact@lemertinet.dz</p>
+                        <p><i class="fas fa-clock"></i> Du Lundi au Samedi: 8h00 - 18h00</p>
                     </div>
-                    <div class="contact-info-item">
-                        <div class="contact-icon">
-                            <i class="fas fa-envelope"></i>
-                        </div>
-                        <div>
-                            <h3>Email</h3>
-                            <p>contact@fromageriemartinet.fr</p>
-                        </div>
+                    <div class="social-links">
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-whatsapp"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
                     </div>
                 </div>
+                <div class="map">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d102448.13530089613!2d4.057997668750013!3d36.65141670000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x128cd99ffc6fd8a3%3A0x9a2c8b5d2ccb411d!2sTigzirt!5e0!3m2!1sfr!2sdz!4v1684329876543!5m2!1sfr!2sdz" allowfullscreen="" loading="lazy"></iframe>
+                </div>
+            </div>
+        </div>
+    </section>
                 <form class="contact-form" id="contactForm">
                     <h2>Envoyez-nous un message</h2>
                     <div class="form-group">
